# agriTwin-app

./: .dockerignore  .env.example  .gitignore  API.md  ARCHITECTURE.md  CLAUDE.md  DATA_ANALYSIS.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SCHEMA.md  alembic.ini  docker-compose.yml  entrypoint.sh  load.sh  migrate.sh  pyproject.toml  requirements-dev.txt  requirements.txt  seed_runner.py
agritwin_app/: __init__.py  celery_app.py  config.py  seed.py  tasks.py  worker.py
agritwin_app/api/: __init__.py  cells.py  crops.py  features.py  scenario.py  score.py  suitability.py  yield_profit.py
agritwin_app/db/: models.py  session.py
agritwin_app/scoring/: aggregator.py  engine.py
agritwin_app/static/css/: app.css
agritwin_app/static/js/: map.js  panel.js  scenario_new.js  scenario_result_map.js  scenario_result_panel.js  suitability_map.js  suitability_panel.js  utils.js  yield_profit_map.js  yield_profit_panel.js
agritwin_app/templates/: base.html  data_sources.html  docs.html  map.html  scenario_list.html  scenario_new.html  scenario_result.html  suitability.html  yield_profit.html
agritwin_app/views/: __init__.py  data_sources.py  docs.py  map.py  scenario.py  suitability.py  yield_profit.py
alembic/: env.py
alembic/versions/: 0001_create_app_tables.py  0002_extend_scenario_for_phase4.py  14577521e503_create_app_tables.py
tests/: conftest.py  test_api_cells.py  test_api_cells_score.py  test_api_features.py  test_api_scenario.py  test_api_score.py  test_api_suitability.py  test_scoring_engine.py
