[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agritwin-app"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "sqlalchemy>=2.0",
    "geoalchemy2>=0.14",
    "psycopg[binary]>=3.1",
    "pydantic-settings>=2.0",
    "alembic>=1.13",
    "h3>=3.7",
    "celery[redis]>=5.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-flask>=1.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agritwin_app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
